# DELTARUNE-chs_tas-coexist

./: .gitattributes  .gitignore  .gitmodules  README.md  build.sh  install_output.sh  latest_pause_hotfix_backup.txt  third_party_manifest.yml
.github/workflows/: ci.yml
adapters/: deltarune-chinese-260710.packages.lock.json  deltarune-chinese-260710.patch  keucher-f3437be-linux.patch
docs/: DEPENDENCIES.md  REPRODUCING.md
scripts/: apply_bps.js  apply_ch5_pause_savestate_hotfix.sh  apply_ch5_rhythm_evaluation_font_hotfix.sh  apply_ch5_v0247_compat.sh  apply_keucher_savestate_hotfix.sh  apply_ralsei_portraits.sh  apply_savestate_performance_hotfix.sh  build_keucher_from_source.sh  check_code_conflicts.sh  check_publish_tree.sh  check_ralsei_lock.sh  check_version_lock.sh  create_patchset.sh  gen_assets.sh  ralsei_portraits.csx  reinstrument_keucher_savestate_v2.sh  subset_font.py  verify_local_assets.sh  verify_merged_output.sh
tools/DataWinProbe/: DataWinProbe.csproj  Program.cs
tools/patcher/: Cargo.toml  README.md  THIRD_PARTY.md  build.rs
tools/patcher/patches/: README.md  xdelta3-0.1.5-cross-windows.patch
tools/patcher/src/: assets.rs  backup.rs  cli.rs  engine.rs  gamedir.rs  gui.rs  main.rs  manifest.rs
verify/: final_audit.txt
verify/code_conflicts/: ch2.tsv
verify/code_conflicts_fast/: ch1.tsv  ch5.tsv  main.tsv
verify/code_conflicts_fast_after/: ch1.tsv  ch2.tsv  ch3.tsv  ch4.tsv  ch5.tsv
verify/code_conflicts_v5.10.7/: ch1.tsv  ch2.tsv  ch3.tsv  ch4.tsv  (+1 more)
versions/: pc-v0.0.247-f3437be-260710.json  ralsei-portraits-samuton-v1.json
(+11 files in other folders)
